	PR rtl-optimization/17825 	* combine.c (subst): Ignore STRICT_LOW_PART no matter if REG_P (new) 	or not.

* gcc.c-torture/compile/20041119-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91369 138bc75d-0d04-0410-961f-82ee72b054a4